# PyPDF3

./: README.md  pyproject.toml  requirements.txt  setup.py
PyPDF3/: pdf.py
